# autogen-pse

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README.zh.md  cli.py  pyproject.toml  web_server.py
docs/: ARCHITECTURE.md
src/autogen_pse/: __init__.py  agents.py  config.py  orchestrator.py  prompts.py  tools.py
tasks/: _registry.json
tasks/demo/: meta.json  run.py
tasks/demo/prompts/: evaluator.md  planner.md  specialist.md
tasks/portfolio-review/: meta.json  prepare.py  prepare_market.py  run.py
tasks/portfolio-review/prompts/: evaluator.md  planner.md  specialist.md
tests/: conftest.py  test_orchestrator.py  test_prepare.py  test_prompts.py  test_tools.py
web/: index.html  package.json
web/src/: App.css  App.jsx  TrendChart.jsx  api.js
