[project]
name = "autogen-pse"
version = "0.1.0"
description = "Planner-Specialist-Evaluator three-role agent framework powered by Microsoft AutoGen"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat>=0.4.0",
    "autogen-ext[openai]>=0.4.0",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.100",
    "langchain-openai>=1.3.3",
    "langchain-qdrant>=1.1.0",
    "markdown>=3.0",
    "ollama>=0.6.2",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "python-magic>=0.4.27",
    "qdrant-client>=1.18.0",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
knowledge = [
    "langchain-community>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.5",
]
